# SluArch

./: CHANGELOG.md  CITATION.cff  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bandit.yml  pypi_publish.yml
docs/: Makefile  SluArch_logo.ai  conf.py  example.ipynb  make.bat  requirements.txt
src/sluarch/: __init__.py  sluarch.py
tests/: test_sluarch.py
