[tool.poetry]
name = "sluarch"
version = "2024.05.16"
description = "SlµArch (Sleep MicroArchitecture): open-source Python package to analyse sleep microarchitecture."
authors = [{ name = "Simon J. Guillot", email = "simon.guillot@inserm.fr" }]
maintainers = [{ name = "Simon J. Guillot", email = "simon.guillot@inserm.fr" }]
Home-page = ["https://github.com/sjg2203/SluArch"]
license = "Apache License 2.0"
requires-python = ">=3.10"
classifiers = ["Development Status :: 5 - Production/Stable",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: Unix",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",]
dependencies = ["mne>=1.6.0",
	"outdated",
	"numpy>=1.25.0",
	"pandas>=2.2.0",
	"scipy>=1.12.0",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
[tool.semantic_release]
version_toml = [
	"pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
